# ezorm

./: .gitignore  AGENTS.md  Cargo.toml  LICENSE  README.md  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  tsconfig.json  vitest.config.ts
.github/workflows/: ci.yml  release-npm.yml
crates/dialects/: Cargo.toml
crates/dialects/src/: lib.rs
crates/engine/: Cargo.toml
crates/engine/src/: lib.rs
crates/event_store/: Cargo.toml
crates/event_store/src/: lib.rs
crates/migrate/: Cargo.toml
crates/migrate/src/: lib.rs
crates/napi/: Cargo.toml
crates/napi/src/: lib.rs
crates/orm_runtime/: Cargo.toml
crates/orm_runtime/src/: lib.rs
crates/projections/: Cargo.toml
crates/projections/src/: lib.rs
crates/proxy/: Cargo.toml
crates/proxy/src/: lib.rs  main.rs
crates/snapshots/: Cargo.toml
crates/snapshots/src/: lib.rs
examples/: vitest.workspace-alias.ts
examples/apps/nest-todo-api/: package.json  tsconfig.json  vitest.config.ts
examples/apps/nest-todo-api/src/: app.test.ts  app.ts  create-todo.dto.ts  id.ts  main.ts  projectors.controller.ts  todo-api.module.ts  todos.controller.ts  todos.service.test.ts  todos.service.ts  tokens.ts
examples/apps/next-todo-web/: .env.example  next.config.ts  package.json  tsconfig.json  vitest.config.ts
examples/apps/next-todo-web/app/: actions.test.ts  actions.ts  globals.css  layout.tsx  page.test.tsx  page.tsx
examples/apps/next-todo-web/lib/: todo-api.ts  todo-store.test.ts  todo-store.ts
scripts/: npm-release-manifest.mjs  npm-release.mjs  pack-ezorm.mjs  pack-proxy-node.mjs  pack-sqlmod.mjs  proxy-packaging.mjs  release-ezorm.mjs  release-proxy-node.mjs  release-sqlmod.mjs  smoke-ezorm-package.mjs  smoke-proxy-node-package.mjs  smoke-sqlmod-package.mjs  version-workspace.mjs
tests/regressions/: cli.regression.test.ts  next-edge-import.regression.test.ts  upcaster-replay.regression.test.ts  version-conflict.regression.test.ts
