[workspace]
members = [
  "crates/engine",
  "crates/event_store",
  "crates/projections",
  "crates/snapshots",
  "crates/dialects",
  "crates/migrate",
  "crates/proxy",
  "crates/napi"
]
resolver = "2"

[workspace.package]
edition = "2021"
license = "MIT"
version = "0.1.0"

[workspace.dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "2.0"
sqlx = { version = "0.8", features = ["runtime-tokio-rustls", "sqlite", "postgres", "mysql"] }
tokio = { version = "1.48", features = ["macros", "rt-multi-thread"] }
