[workspace]
members = [
  "crates/orm_runtime",
  "crates/dialects",
  "crates/migrate",
  "crates/proxy"
]
resolver = "2"

[workspace.package]
edition = "2021"
license = "MIT"
version = "0.1.0"

[workspace.dependencies]
async-trait = "0.1"
axum = { version = "0.8", features = ["json"] }
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "2.0"
sqlx = { version = "0.8", features = ["runtime-tokio-rustls", "sqlite", "postgres", "mysql"] }
tokio = { version = "1.48", features = ["macros", "net", "rt-multi-thread"] }
tower = { version = "0.5", features = ["util"] }
