[package]
name = "sqlmodel_ts_engine"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
sqlmodel_ts_event_store = { path = "../event_store" }
sqlmodel_ts_snapshots = { path = "../snapshots" }

[dev-dependencies]
tokio.workspace = true
