[package]
name = "sqlmodel_engine"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
sqlmodel_event_store = { path = "../event_store" }
sqlmodel_projections = { path = "../projections" }
sqlmodel_snapshots = { path = "../snapshots" }

[dev-dependencies]
tokio.workspace = true
