[package]
name = "ezorm_engine"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
ezorm_event_store = { path = "../event_store" }
ezorm_projections = { path = "../projections" }
ezorm_snapshots = { path = "../snapshots" }

[dev-dependencies]
tokio.workspace = true
