[package]
name = "sqlmodel_ts_event_store"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
sqlx.workspace = true
sqlmodel_ts_dialects = { path = "../dialects" }

[dev-dependencies]
tokio.workspace = true
