[package]
name = "ezorm_event_store"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
sqlx.workspace = true
ezorm_dialects = { path = "../dialects" }

[dev-dependencies]
tokio.workspace = true
