[package]
name = "sqlmodel_projections"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
async-trait.workspace = true
serde.workspace = true
sqlmodel_dialects = { path = "../dialects" }
sqlmodel_event_store = { path = "../event_store" }
sqlx.workspace = true
thiserror.workspace = true

[dev-dependencies]
serde_json.workspace = true
tokio.workspace = true
