[package]
name = "ezorm_projections"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
async-trait.workspace = true
serde.workspace = true
ezorm_dialects = { path = "../dialects" }
ezorm_event_store = { path = "../event_store" }
sqlx.workspace = true
thiserror.workspace = true

[dev-dependencies]
serde_json.workspace = true
tokio.workspace = true
