[package]
name = "ezorm_snapshots"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
serde.workspace = true
serde_json.workspace = true
sqlx.workspace = true
thiserror.workspace = true
ezorm_dialects = { path = "../dialects" }

[dev-dependencies]
tokio.workspace = true
